package no.ntnu.tdt4240.project.event;

public interface EventListener {
    void receive(Event event);
}
